feat: FE shopping basket

--- a/gocommerce/src/App.css
+++ b/gocommerce/src/App.css
@@ -1,7 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.width-shopping-cart {
-    max-width: 56em;
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
+@import "tailwindcss";
+@theme {
+    --font-mono: "Jetbrains Mono", monospace;
 }
